[package]
name = "load_test"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive", "cargo"] }
url = "2.4"
base64 = "0.21"
uuid = { version = "1.5", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
toml = "0.8"
serde_yaml = "0.9"
rand = "0.8"